--- a/src/app/component/dialog/dialog.component.html
+++ b/src/app/component/dialog/dialog.component.html
@@ -1,7 +1,7 @@
 <div class="dialog">
-    <h1 mat-dialog-title>{{data.nombre | uppercase}}</h1>
+    <h1 mat-dialog-title style="color: white;">{{data.nombre | uppercase}}</h1>
     <div mat-dialog-content>
-        <img src="{{data.imagen}}" alt="">
+        <img class="imagen" src="{{data.imagen}}" alt="">
     <ul>
         <li>
             Tipo: {{data.tipo}}
