--- a/src/app/component/dialog/dialog.component.scss
+++ b/src/app/component/dialog/dialog.component.scss
@@ -1,4 +1,14 @@
 .dialog{
     text-align: center;
     min-width: 100%;
+    background-color: #e21919c9;
+}
+
+.imagen{
+    background-size: cover;
+}
+
+li{
+    color: white;
+    margin-right: 1em;
 }
